feat: rainforest screens + spotify album embed

--- a/index.html
+++ b/index.html
@@ -247,8 +247,10 @@
                 </li>
 
                 <div class="grid-container" style="columns: 1 100px;">
-                  <div>
-                    <img class='grid-item' src='./assets/images/LatroitRemix/maxresdefault.jpg' alt=''>
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/2_GWVq0N2Ys" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
                   </div>
                 </div>
 
@@ -260,6 +262,21 @@
               <ul>
                 <li>🎵 Uploaded a <a href="https://youtu.be/56mJiTa85lo"><i>Madeon - Beings Orchestral Remix</i></a> I
                   made on my YouTube channel</li>
+                <!-- 
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/MadeonBeings/maxresdefault (1).jpg' alt=''>
+                  </div>
+                </div> -->
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/56mJiTa85lo" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
@@ -275,6 +292,23 @@
                   based on some characteristics and features. Synthetic Cinema-Gaze was a blend of electronic film score
                   and shoegaze music. This track was inspide by Hans Zimmer - Time and Rezzett. A <i>making of</i> is
                   available <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a></li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/2nX5px-qVrk" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/2L7_LpTwFws" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
@@ -291,6 +325,15 @@
                     href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
                 <li>🎵 Also uploaded a <i>making of</i> <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a>
                 </li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/vcJXhWtoi5Y" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
@@ -317,6 +360,13 @@
                     href="https://open.spotify.com/album/0zdpRQnM6aHiuvNB9MsT8A">5 Week Challenge</a>, self-published.
                   This album was inspired by a challenge by the same name: for 5 weeks, each day would be spent to make
                   a track from start to finish. This album is a colletion of the resulting tracks</li>
+
+                <iframe style="border-radius:12px; margin-top: 16px; box-shadow: 2px 1px 8px 2px rgb(0 0 0 / 50%);"
+                  src="https://open.spotify.com/embed/album/0zdpRQnM6aHiuvNB9MsT8A?utm_source=generator" width="100%"
+                  height="380" frameBorder="0" allowfullscreen=""
+                  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                  loading="lazy"></iframe>
+
               </ul>
             </section>
 
@@ -329,6 +379,78 @@
                   up-to-date version. It features the main map of the game: a tropical rainforest. I'm planning to
                   resume the development of this game some time in the future, maybe as a VR game with new graphics and
                   mechanics</li>
+
+                <div class="grid-container" style="columns: 3 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00002.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00003.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00004.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00006.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00007.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00008.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00009.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00013.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00014.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00015.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00017.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00019.png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/ScreenShot00005.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/ScreenShot00008.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/ScreenShot00011.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/ScreenShot00026.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/ScreenShot00075.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/RainforestMapShowcase/HighresScreenshot00019.png'
+                      alt=''>
+                  </div>
+
+                </div>
+
               </ul>
             </section>
 
