feat: cloudflare stats

--- a/index.html
+++ b/index.html
@@ -721,6 +721,12 @@
     <div id="caption"></div>
   </div>
 
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "6898933cc2394935b9d71b9cc3b6e18f"}'>
+    </script>
+  <!-- End Cloudflare Web Analytics -->
+
 </body>
 
 
