feat: CLiGL images

--- a/index.html
+++ b/index.html
@@ -209,6 +209,31 @@
                   using the provided cli (command line interface). The user was also able to view the graph in real time
                   and export it in various graphic formats, such as PNG and SVG, and other text formats for third party
                   graphs editing software</li>
+
+                <div class="grid-container" style="columns: 2 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/CLiGL/CLiGL-01.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/CLiGL/CLiGL-02.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/CLiGL/CLiGL-03.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/CLiGL/butter.svg' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/CLiGL/cligl-test-graph.svg' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/CLiGL/cq6.svg' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/CLiGL/x9-.svg' alt=''>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
@@ -715,7 +740,7 @@
     <span class="close">&times;</span>
 
     <!-- Modal Content (The Image) -->
-    <img class="modal-content" id="img01">
+    <img class="modal-content" id="img01" style="background-color:whitesmoke">
 
     <!-- Modal Caption (Image Text) -->
     <div id="caption"></div>
