feat: JDoom pics

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                   and export it in various graphic formats, such as PNG and SVG, and other text formats for third party
                   graphs editing software</li>
 
-                <div class="grid-container" style="columns: 2 100px;">
+                <div class="grid-container" style="columns: 3 100px;">
                   <div>
                     <img class='grid-item' src='./assets/images/CLiGL/CLiGL-01.png' alt=''>
                   </div>
@@ -256,6 +256,28 @@
               <ul>
                 <li>💻 Developed JDoom, a simple Java remake of the original Doom, as a project for an University exame
                 </li>
+
+                <div class="grid-container" style="columns: 2 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/JDoom/JDoom-01.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/JDoom/JDoom-02.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/JDoom/JDoom-03.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/JDoom/JDoom-04.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/JDoom/JDoom-05.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/JDoom/JDoom-06.png' alt=''>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
