feat: full size modal image fit

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <section>
               <h4>September</h4>
               <ul>
-                <li>💻 Developed JDoom, a simple Java remake of the original Doom, as a project for an University exame
+                <li>💻 Developed JDoom, a simple Java remake of the original Doom, as a project for an University exam
                 </li>
 
                 <div class="grid-container" style="columns: 2 100px;">
