feat: scpnemesi images

--- a/index.html
+++ b/index.html
@@ -72,6 +72,40 @@
                 <li>🎮 SCP|Nemesi backend server development started. Tech stack used: JavaScript, NodeJS, Mongoose,
                   ExpressJS, MongoDB. Hosted for free on
                   the cloud using Vercel and MongoDB Atlas</li>
+
+                <li>🎮 New map for my game SCP|Nemesi. It's set in traditional japanese village, and features 4
+                  characters: a farmer, a blacksmith, a fisherman and a samurai. I made the characters using Character
+                  Creator 3, and sketched the clothing using ZBrush. These are not final and still need some work
+                </li>
+
+                <div class="grid-container" style="columns: 2 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00098.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00099.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00109_Blacksmith.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00112_Fisherman.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00100.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/ScreenShot00008.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00110_Farmer.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00111_Samurai.png' alt=''>
+                  </div>
+                  
+                </div>
+
               </ul>
             </section>
 
@@ -85,9 +119,140 @@
             <section>
               <h4>March</h4>
               <ul>
-                <li>🎮 Scrapped the old characters I made for my game SCP|Nemesi in favor of new ones made using
-                  Character
-                  Creator 3</li>
+                <li>🎮 Scrapped the old characters I made for my game SCP|Nemesi in favor of new ones I made using
+                  Character Creator 3</li>
+
+                <div class="grid-container" style="columns: 2 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00107_Detective.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00108.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00113_Janitor.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00114.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00115_Convicted.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00116_Reporter.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/ScreenShot00006.png' alt=''>
+                  </div>
+                </div>
+
+              </ul>
+            </section>
+
+            <section>
+              <h4>February</h4>
+              <ul>
+                <li>🎮 Completed the first map for my game SCP|Nemesi that will be available in the final game. This map
+                  is set in a 1960s-1970s police station, and it's inpired by Resident Evil 2. It features 4 roles as of
+                  now: a detective, a janitor, a convicted and a reporter</li>
+
+                <div class="grid-container" style="columns: 3 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00095.png' alt=''>
+                  </div>
+
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00066.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00067.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00068.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00069.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00070.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00071.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00072.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00073.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00074.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00076.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00077.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00078.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00080.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00081.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00082.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00083.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00084.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00085.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00086.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00087.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00088.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00089.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00090.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00091.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00092.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00097.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00102.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00105.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00106.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/Immagine 2022-03-02 193049.png' alt=''>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
@@ -95,6 +260,93 @@
 
           <section class="year">
             <h3>2021</h3>
+
+            <section>
+              <h4>December</h4>
+              <ul>
+                <li>🎮 Improved the texture of my SCP-173 Model</li>
+
+                <div class="grid-container" style="columns: 3 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00032.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00033.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00035.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00037.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00039.png' alt=''>
+                  </div>
+
+                </div>
+
+                <li>🎮 Final layout for the test map / facility of my game SCP|Nemesi</li>
+
+                <div class="grid-container" style="columns: 3 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00041.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00042.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00043.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00044.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00045.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00046.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00047.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00048.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00049.png' alt=''>
+                  </div>
+                </div>
+
+                <li>🎮 Imported SCP-106 (The Old Guy) and SCP-049 (The Plague Doctor) 3D models in my game
+                  SCP|Nemesi. They were modelled in ZBrush, textured in Substance Painter and rigged using Mixamo</li>
+
+                <div class="grid-container" style="columns: 3 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00050.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00051.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00052.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00053.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00062.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00063.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00064.png' alt=''>
+                  </div>
+
+                </div>
+
+              </ul>
+            </section>
 
             <section>
               <h4>October</h4>
@@ -287,6 +539,77 @@
                 <li>🎮 SCP|Nemesi development started. It's a multiplayer horror game based on the <a
                     href="https://scp-wiki.wikidot.com/">SCP lore</a>, made with Unreal Engine 4. I used ZBrush to make
                   the various 3D models</li>
+
+                <div class="grid-container" style="columns: 2 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00000.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00001.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00002.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00004.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00005.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00006.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00007.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00008.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00009.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00010.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00012.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00014.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00015.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00017.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00018-2.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00019.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00020.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00021.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00023.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00027.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00028.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00029.png' alt=''>
+                  </div>
+
+                </div>
+
                 <li>🎮 ProjectNemesis development halted</li>
                 <li>🎵 Uploaded a new track available <a href="https://youtu.be/2_GWVq0N2Ys">here</a> on my YouTube
                   channel. This track was part of a Metapop competition called <i>Latroit Remix Essentials: Vol 1.</i>
