feat: remove lazy load from top most images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <div class="grid-container" style="columns: 1 100px;">
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/SCP173_2uSfYgc-_2.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/SCP173_2uSfYgc-_2.png' alt=''>
                   </div>
                 </div>
 
@@ -80,28 +80,28 @@
 
                 <div class="grid-container" style="columns: 2 100px;">
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00098.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00098.png' alt=''>
                   </div>
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00099.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00099.png' alt=''>
                   </div>
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00109_Blacksmith.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00109_Blacksmith.png' alt=''>
                   </div>
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00112_Fisherman.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00112_Fisherman.png' alt=''>
                   </div>
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00100.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00100.png' alt=''>
                   </div>
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/ScreenShot00008.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/ScreenShot00008.png' alt=''>
                   </div>
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00110_Farmer.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00110_Farmer.png' alt=''>
                   </div>
                   <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00111_Samurai.png' alt=''>
+                    <img class="easeload" onload="this.style.opacity=1"  class='grid-item' src='./assets/images/SCPNemesi/HighresScreenshot00111_Samurai.png' alt=''>
                   </div>
                   
                 </div>
