--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+
+  <title>Alfredo Bellani - Portfolio</title>
+
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 
